Delve Rework! (#1632)